Clear notebook output

--- a/getting_started_with_julia_and_trixi.ipynb
+++ b/getting_started_with_julia_and_trixi.ipynb
@@ -125,7 +125,7 @@
     "                       n_cells_max=30_000)\n",
     "\n",
     "# Create semidiscretization with all spatial discretization-related components\n",
-    "semi = SemidiscretizationHyperbolic(mesh, equations,\n",
+    "semi = SemidiscretizationHyperbolic(mesh_static, equations,\n",
     "                                    initial_condition_convergence_test,\n",
     "                                    solver)\n",
     "\n",
@@ -378,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In a simulation started from the REPL, the `VisualizationCallback` will not create seven individual images but open a single window that gets updated with each new plot as it is generated (see, e.g., this [YouTube video](https://www.youtube.com/watch?v=UZtrqeDY1Fs))."
+    "In a simulation started from the REPL, the `VisualizationCallback` will not create seven individual images but open a single window that gets updated with each new plot as it is generated (see, e.g., this [YouTube video](https://www.youtube.com/watch?v=UZtrqeDY1Fs)). The full elixir including adaptive mesh refinement and in-situ visualization is available at [examples/elixir_advection_amr_visualization.jl](examples/elixir_advection_amr_visualization.jl)."
    ]
   },
   {
