Separate markdown fields such that we can collapse all text except headings

--- a/getting_started_with_julia_and_trixi.ipynb
+++ b/getting_started_with_julia_and_trixi.ipynb
@@ -21,8 +21,13 @@
     "\n",
     "*Note:* Jupyter notebooks (like the Julia REPL) maintain an internal *state*, i.e., the different cells share a common variable space. This means that if you change a variable in a later cell and then reuse it (explicitly or implicitly) in an earlier cell, the results might change unexpectedly. Thus if in doubt, re-run the entire notebook *in order*.\n",
     "\n",
-    "**NOTE: This repository will be updated several times prior to the talk, with the final version of the notebook to be uploaded at least one day before.**\n",
-    "\n",
+    "**NOTE: This repository will be updated several times prior to the talk, with the final version of the notebook to be uploaded at least one day before.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Table of contents**\n",
     "1. [Quickstart](#Quickstart)\n",
     "2. [Mixing an elixir: creating a Trixi simulation from scratch](#Mixing-an-elixir:-creating-a-Trixi-simulation-from-scratch)\n",
@@ -33,10 +38,20 @@
     "3. [Advanced usage](#Advanced-usage)\n",
     "   1. [Analyzing the solution](#Analyzing-the-solution)\n",
     "   2. [Running convergence tests](#Running-convergence-tests)\n",
-    "   3. [Postprocessing with Trixi2Vtk and ParaView](#Postprocessing-with-Trixi2Vtk-and-ParaView)\n",
-    "\n",
-    "## Quickstart\n",
-    "\n",
+    "   3. [Postprocessing with Trixi2Vtk and ParaView](#Postprocessing-with-Trixi2Vtk-and-ParaView)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quickstart"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To quickly get up and running with Trixi, load the package (only required once) and start an example 2D simulation with the following commands (to execute a Jupyter cell, select it and hit `Shift-Enter`):"
    ]
   },
@@ -83,12 +98,39 @@
     }
    },
    "source": [
-    "## Mixing an elixir: creating a Trixi simulation from scratch\n",
-    "\n",
-    "In this section, we will see how one can combine the individual components that make up Trixi into a full simulation setup that can be executed.\n",
-    "\n",
-    "### The basics\n",
-    "\n",
+    "## Mixing an elixir: creating a Trixi simulation from scratch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "In this section, we will see how one can combine the individual components that make up Trixi into a full simulation setup that can be executed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### The basics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "Let's have a look at what an elixir looks like. Generally speaking, the following components are required:\n",
     "* an **equation** object that contains all physics-specific data and functionality\n",
     "* a **solver** that represents the numerical method and its algorithms\n",
@@ -195,8 +237,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using a different initial condition\n",
-    "\n",
+    "### Using a different initial condition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "So far we have only used functionality that is provided by Trixi. With its modular architecture, however, it is easy to extend Trixi's functionality to your liking. Let's define a new initial condition with a cosine-shaped pulse at its center:"
    ]
   },
@@ -250,9 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adaptive mesh refinement\n",
-    "\n",
-    "In the previous examples, we have always used a static, uniform mesh. This means we did not fully exploit one of Trixi's fundamental building blocks: the underlying hierarchical Cartesian mesh. With its ability to locally refine the mesh in a solution-adaptive way, it can be used to greatly speed up simulations with no or minimal loss in overall accuracy. The following image series of the grid for an expanding blast wave simulation ([elixir](https://github.com/trixi-framework/Trixi.jl/blob/v0.3.7/examples/2d/elixir_euler_blast_wave_amr.jl) available with Trixi) at $t = [0.2, 0.6, 1.0]$ (left to right) illustrates how the mesh resolution is increased only where needed."
+    "### Adaptive mesh refinement"
    ]
   },
   {
@@ -264,15 +309,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In the previous examples, we have always used a static, uniform mesh. This means we did not fully exploit one of Trixi's fundamental building blocks: the underlying hierarchical Cartesian mesh. With its ability to locally refine the mesh in a solution-adaptive way, it can be used to greatly speed up simulations with no or minimal loss in overall accuracy. The following image series of the grid for an expanding blast wave simulation ([elixir](https://github.com/trixi-framework/Trixi.jl/blob/v0.3.7/examples/2d/elixir_euler_blast_wave_amr.jl) available with Trixi) at $t = [0.2, 0.6, 1.0]$ (left to right) illustrates how the mesh resolution is increased only where needed.\n",
+    "\n",
     "<div align=\"center\">\n",
     "  <img src=\"attachment:1f20be7c-e949-410f-b11a-ea4e37a3b2b5.png\" width=\"50%\" />\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "</div>\n",
+    "\n",
     "With Trixi, you can statically refine the mesh upfront, adaptively refine it during a simulation, or use a combination of both. Here, we will focus on how to do adaptive mesh refinement (AMR), which is implemented in Trixi as a **step callback**. A callback is an algorithmic entity that is registered with the ODE solver and then *called* in regular intervals to perform certain tasks: *step* callbacks are run after each time step, while *stage* callbacks are run after each stage of the ODE solver.\n",
     "\n",
     "Using callbacks instead of hard-coding all features in the main loop has the advantage that it allows to extend Trixi with new functionality without having to modify its code directly. Beyond AMR, in Trixi we make use of callbacks also for tasks such as solution analysis, file I/O, in-situ visualization, or time step size calculation.\n",
@@ -340,8 +382,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### In-situ visualization\n",
-    "\n",
+    "### In-situ visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Another feature that is implemented in Trixi via callbacks is the ability to plot the solution during a simulation, also known as *in-situ visualization*. This can be useful to quickly check how a solution is developing over time, and is great for live demonstrations of a simulation. In its simplest form, you can create a `VisualizationCallback` only with the information in which frequency the results should be plotted, but it also allows to set formatting options:"
    ]
   },
@@ -385,11 +432,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Advanced usage\n",
-    "\n",
-    "In the following, we will introduce some of the more advanced features in Trixi (advanced in the sense that they go beyond basic functionality, not that they are particularly complicated to use).\n",
-    "\n",
-    "### Analyzing the solution\n",
+    "## Advanced usage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following, we will introduce some of the more advanced features in Trixi (advanced in the sense that they go beyond basic functionality, not that they are particularly complicated to use)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analyzing the solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Oftentimes it is desireable to analyze a running simulation quantitatively by calculating integral quantities on the fly, which can be achieved by creating an `AnalysisCallback`. By default, it computes the $L^2$ and $L^\\infty$ errors and prints it to the terminal (we have seen an example of this in the [Quickstart](#Quickstart) section above). This can be extended to other built-in or user-provided integral quantities, such as the entropy time derivative $\\partial S/\\partial u \\cdot \\partial u/\\partial t$, the conservation error, or the total kinetic energy.\n",
     "\n",
     "In the following, we will create and `AnalysisCallback` that performs a solution analysis every 20 time steps, additionally computes the conservation error, and saves everything to a file (in addition to showing it on the terminal):"
@@ -448,8 +511,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Running convergence tests\n",
-    "\n",
+    "### Running convergence tests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "When developing new numerical methods, a common part of the workflow is the check if the implemented scheme still exhibits the expected order of convergence (EOC) for mesh refinement. Trixi has a helper function `convergence_test(...)`, which re-runs a given elixir multiple times, each time increasing the mesh resolution by one. For this, we will again use the default example elixir provided by Trixi.\n",
     "\n",
     "*Note:* Since changing the mesh resolution also affects the allowed time step through the CFL condition, `convergence_test(...)` requires the elixir to use a [StepsizeCallback](https://trixi-framework.github.io/Trixi.jl/stable/reference-trixi/#Trixi.StepsizeCallback) to automatically compute the explicit time step."
@@ -471,8 +539,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Postprocessing with Trixi2Vtk and ParaView\n",
-    "\n",
+    "### Postprocessing with Trixi2Vtk and ParaView"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "So far we have only visualized the solutions ad-hoc using the `plots(...)` function of the `Plots` package. However, for a more in-depth solution analysis especially of 3D data, it is often helpful to rely on a proper visualization program. Trixi supports converting its solution files, which are created as HDF5 files by the [SaveSolutionCallback](https://trixi-framework.github.io/Trixi.jl/stable/reference-trixi/#Trixi.SaveSolutionCallback)), to VTK files that can be opened and visualized with [ParaView](https://www.paraview.org) or [VisIt](http://visit.llnl.gov). This functionality is available in the [Trixi2Vtk](https://github.com/trixi-framework/Trixi2Vtk.jl) package, which provides a `trixi2vtk(...)` function:"
    ]
   },
