Add section on visualizing the spectrum

--- a/getting_started_with_julia_and_trixi.ipynb
+++ b/getting_started_with_julia_and_trixi.ipynb
@@ -38,7 +38,8 @@
     "3. [Advanced usage](#Advanced-usage)\n",
     "   1. [Analyzing the solution](#Analyzing-the-solution)\n",
     "   2. [Running convergence tests](#Running-convergence-tests)\n",
-    "   3. [Postprocessing with Trixi2Vtk and ParaView](#Postprocessing-with-Trixi2Vtk-and-ParaView)"
+    "   3. [Visualizing the spectrum](#Visualizing-the-spectrum)\n",
+    "   4. [Postprocessing with Trixi2Vtk and ParaView](#Postprocessing-with-Trixi2Vtk-and-ParaView)"
    ]
   },
   {
@@ -533,6 +534,66 @@
    "source": [
     "# Run convergence test with default example and 3 different mesh refinement levels\n",
     "convergence_test(default_example(), 3);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualizing the spectrum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trixi contains a method `linear_structure` that wraps the right-hand side operator of a semidiscretization as a linear operator. This can then be used to plot the spectrum for, e.g., the discretization of the scalar advection equation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Include an elixir to quickly obtain an appropriate semi discretization\n",
+    "trixi_include(joinpath(\"examples\", \"elixir_advection_simple.jl\"), initial_refinement_level=2)\n",
+    "\n",
+    "# Get linear operator\n",
+    "A, b = linear_structure(semi)\n",
+    "\n",
+    "# Compute eigenvalues\n",
+    "using LinearAlgebra # Contains `eigvals` to compute the eigenvalues (part of Julia)\n",
+    "λ = eigvals(Matrix(A))\n",
+    "\n",
+    "# Plot eigenvalues in complex plane\n",
+    "plot(real(λ), imag(λ), seriestype=:scatter, xlims=(-40,5), ylims=(-30,30), legend=nothing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly, to analyse the spectrum of non-linear operators we can use `jacobian_fd`, which uses second-order finite differences to compute the Jacobian `J` of the operator. Here we use the elixir [examples/elixir_euler_simple.jl](examples/elixir_euler_simple.jl), which is a simplified version of an elixir for the compressible Euler equations that also comes packaged with Trixi:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Include an elixir to quickly obtain an appropriate semi discretization\n",
+    "trixi_include(joinpath(\"examples\", \"elixir_euler_simple.jl\"))\n",
+    "\n",
+    "# Determine Jacobian\n",
+    "J = jacobian_fd(semi)\n",
+    "\n",
+    "# Compute eigenvalues\n",
+    "λ = eigvals(J)\n",
+    "\n",
+    "# Plot eigenvalues in complex plane\n",
+    "plot(real(λ), imag(λ), seriestype=:scatter, xlims=(-2,2), ylims=(-1000,1000), legend=nothing)"
    ]
   },
   {
