--- a/getting_started_with_julia_and_trixi.ipynb
+++ b/getting_started_with_julia_and_trixi.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "The primary goal of this notebook is give a live demonstration of Julia and Trixi during a talk given at the Numerical Analysis Seminar at Lund University in January 2021. Here, we will show how to use Trixi for setting up and running simulations, how to visualize the results, and how to extend Trixi with new functionality. The notebook and a description of how to run it with Jupyter are available at https://github.com/trixi-framework/talk-2021-julia-adaptive-multi-physics-simulations. For more information about Trixi and how to use it, please visit Trixi on [GitHub](https://github.com/trixi-framework/Trixi.jl) or refer to the [official documentation](https://trixi-framework.github.io/Trixi.jl/stable/).\n",
     "\n",
-    "*Note:* Jupyter notebooks (like the Julia REPL) maintain an internal *state*, i.e., the different cells share a common variable space. This means that if you change a variable in a later cell and then reuse it (explicitly or implicitly) in an earlier cell, the results might change unexpectedly. Thus if in doubt, re-run the entire notebook *in order*.\n",
+    "*Note:* If you change a variable in a later cell and then re-execute an earlier cell, the results might change unexpectedly. Thus if in doubt, re-run the entire notebook *in order*. The reason is that all cells in a Jupyter notebooks share a common variable space. \n",
     "\n",
     "**NOTE: This repository will be updated several times prior to the talk, with the final version of the notebook to be uploaded at least one day before.**"
    ]
@@ -201,37 +201,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see from the snippet above, the entirety of a simulation setup is defined in pure Julia: There are no \"special\" parameter files, and changing a simulation setup means to modify its elixir. For example, we can change the adection velocity by creating a new `LinearScalarAdvectionEquation2D` object with a different set of speeds and re-run the simulation with the following code:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "As you can see from the snippet above, the entirety of a simulation setup is defined in pure Julia: There are no \"special\" parameter files, and changing a simulation setup means to modify its elixir. For example, we can change the advection speeds by passing a different velocity vector to `LinearScalarAdvectionEquation2D`,\n",
+    "\n",
+    "```julia\n",
     "# Create equations with different advection velocity\n",
     "advectionvelocity = (1.0, 0.1)\n",
-    "equations = LinearScalarAdvectionEquation2D(advectionvelocity)\n",
+    "equations = LinearScalarAdvectionEquation2D(advectionvelocity);\n",
+    "```\n",
     "\n",
-    "# Recreate semidiscretization with the new `equations` object\n",
-    "semi = SemidiscretizationHyperbolic(mesh_static, equations,\n",
-    "                                    initial_condition_convergence_test,\n",
-    "                                    solver)\n",
-    "\n",
-    "# Create and solve ODE problem\n",
-    "ode = semidiscretize(semi, (0.0, 1.0));\n",
-    "sol = solve(ode, CarpenterKennedy2N54(williamson_condition=false), dt=2.5e-2);\n",
-    "\n",
-    "# Plot result with axis labels\n",
-    "plot(sol, xguide=\"x\", yguide=\"y\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In addition to the different advection velocities, we have added `x` and `y` labels to the axes to illustrate that you can use all of the regular plotting features of the `Plots` package."
+    "and re-run the simulation by re-creating the semidiscretization and the `ODEProblem`, and then calling the `solve(...)` function again."
    ]
   },
   {
@@ -245,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So far we have only used functionality that is provided by Trixi. With its modular architecture, however, it is easy to extend Trixi's functionality to your liking. Let's define a new initial condition with a cosine-shaped pulse at its center:"
+    "So far we have only used functionality that is provided by Trixi. With its modular architecture, however, it is easy to extend Trixi with your own features. Let's define a new initial condition with a cosine-shaped pulse at its center:"
    ]
   },
   {
@@ -255,13 +233,13 @@
    "outputs": [],
    "source": [
     "function cosine_pulse(x, t, equations::LinearScalarAdvectionEquation2D)\n",
-    "  halfwidth = 0.3\n",
+    "  halfwidth = 0.5\n",
     "  radius = sqrt(x[1]^2 + x[2]^2)\n",
     "\n",
     "  if radius > halfwidth\n",
     "    u = 0.0\n",
     "  else\n",
-    "    u = 0.2 * cos(pi/2 * radius / halfwidth)\n",
+    "    u = 0.1 + 0.1 * cos(pi * radius / halfwidth)\n",
     "  end\n",
     "\n",
     "  return Trixi.@SVector [u]\n",
